<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/ic_information_top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingTop="3dp"
            android:text="@string/txt_title_information"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:background="@drawable/ic_deliver_blue" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/txt_speed"
                android:textStyle="bold"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/txt_speed"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="- 64 km/h"
                android:textSize="12sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:background="@drawable/ic_deliver_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/txt_mileage"
                android:textStyle="bold"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/txt_mileage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="- 2350 km"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:background="@drawable/ic_deliver_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/txt_voltage"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_voltage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:textSize="12sp"
                android:text="- 13.4 в" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:background="@drawable/ic_deliver_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:textSize="12sp"
                android:text="@string/txt_engine"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_engine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:textSize="12sp"
                android:text="- 68 c" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:background="@drawable/ic_deliver_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/txt_t_saloon"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_t_saloon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:textSize="12sp"
                android:text="- 25 c" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:background="@drawable/ic_deliver_blue_bottom" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="top"
                android:paddingLeft="5dp"
                android:textSize="12sp"
                android:text="@string/txt_t_street"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_t_street"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="top"
                android:paddingLeft="5dp"
                android:textSize="12sp"
                android:text="- 20 c" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>